fix/ menuhamburguer pokeball overflowing x

--- a/src/components/molecules/menuhamburguer/menuhamburguer.module.scss
+++ b/src/components/molecules/menuhamburguer/menuhamburguer.module.scss
@@ -37,6 +37,7 @@
     top: 0;
     right: 0;
     fill: rgba(0, 0, 0, 0.05);
+    overflow: hidden;
   }
 }
 
